vps-evo/argo/seedbox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: seedbox
  labels:
    app: rtorrent
  name: rtorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rtorrent
  template:
    metadata:
      labels:
        app: rtorrent
    spec:
      containers:
        - env:
          image: diameter/rtorrent-rutorrent
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command:
                  - rm
                  - /downloads/sessions/rtorrent.lock
          resources:
            requests:
              cpu: 100m
              memory: 200M
            limits:
              cpu: 2
          name: rtorrent
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 5000
              protocol: TCP
            - containerPort: 32160
              protocol: UDP
            - containerPort: 32161
              protocol: TCP
          volumeMounts:
            - mountPath: /downloads
              name: rtorrent-downloads
      restartPolicy: Always
      securityContext:
        fsGroup: 5001
      volumes:
        - name: rtorrent-downloads
          persistentVolumeClaim:
            claimName: rtorrent-downloads
